♻️ [Improve/all-of-them-104] 앙투앙 1차 대격변 (#108)
* :art: dto에 swagger 추가

* :art: 공통 dto로 통일

* :art: webtoon index를 통한 조회 성능 향상

* :art: dto 리펙토링

* :art: 불필요한 import 정리

* :art: webtoon 도메인 정리

* :art: cruiser를 조금 더 편리하게

* :art: discussion 정리 및 rest 규칙 단일화

* :art: user 로직에 대한 정리 작업 진행

* :art: 탑승하차 리펙토링

* :art: 불필요한 auth 로직 리펙토링

* :art: redis 모듈화 진행

* :art: dto 변경

* :art: 점수 할당 제도 모듈화

* :art: 불필요한 Import 삭제

* :memo: readme 수정

* :art: 패키지 위치 변경